--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
         <version>2.11.1</version>
@@ -37,13 +31,36 @@
     </dependency>
     <dependency>
     	<groupId>com.graphhopper</groupId>
+    	<artifactId>graphhopper-api</artifactId>
+    	<version>0.12.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.graphhopper</groupId>
     	<artifactId>graphhopper-core</artifactId>
-    	<version>0.12.0</version>
+    	<version>0.12.0-SNAPSHOT</version>
+    </dependency>
+    <!-- dependency of graphhopper-core -->
+    <dependency>
+        <groupId>com.carrotsearch</groupId>
+        <artifactId>hppc</artifactId>
+        <version>0.8.1</version>
     </dependency>
     <dependency>
         <groupId>com.graphhopper</groupId>
         <artifactId>graphhopper-reader-osm</artifactId>
-        <version>0.12.0</version>
+        <version>0.12.0-SNAPSHOT</version>
+      </dependency>
+    <!-- dependency of graphhopper-reader-osm -->
+    <dependency>
+        <groupId>org.openstreetmap.osmosis</groupId>
+        <artifactId>osmosis-osm-binary</artifactId>
+        <version>0.46</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -65,4 +82,11 @@
           </plugin>
       </plugins>
   </build>
+  <repositories>
+  <repository>
+    <id>forked-graphhopper.local</id>
+    <name>forked-graphhopper</name>
+    <url>file:${project.basedir}/maven_repository</url>
+  </repository>
+  </repositories>
 </project>
