--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j18-impl</artifactId>
         <version>2.11.1</version>
+      </dependency>
+    <!-- required for spatial index of linear barriers -->
+    <dependency>
+        <groupId>org.locationtech.jts</groupId>
+        <artifactId>jts-core</artifactId>
+        <version>1.15.1</version>
     </dependency>
     <dependency>
     	<groupId>com.graphhopper</groupId>
